--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,5 +58,17 @@
                 "paths": ["src"]
             }
         }
+    },
+    "globals": {
+        "React": true,
+        "google": true,
+        "mount": true,
+        "mountWithRouter": true,
+        "shallow": true,
+        "shallowWithRouter": true,
+        "context": true,
+        "expect": true,
+        "jsdom": true,
+        "JSX": true
     }
 }
