--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.24.0",
     "ethers": "^5.5.3",
+    "keen-slider": "^6.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lottie-player": "^1.4.1",
