feat: add Carousel component

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.24.0",
     "ethers": "^5.5.3",
-    "keen-slider": "^6.6.3",
     "i18next": "^21.6.6",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
+    "keen-slider": "^6.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.3",
@@ -73,6 +73,7 @@
     "@storybook/addon-actions": "^6.4.13",
     "@storybook/addon-essentials": "^6.4.13",
     "@storybook/addon-links": "^6.4.13",
+    "@storybook/addon-viewport": "^6.4.14",
     "@storybook/builder-webpack5": "^6.4.13",
     "@storybook/manager-webpack5": "^6.4.13",
     "@storybook/node-logger": "^6.4.13",
