--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/analytics": "^0.7.5",
+    "@firebase/app": "^0.7.14",
     "@sentry/react": "^6.16.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -13,6 +15,7 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.24.0",
     "ethers": "^5.5.3",
+    "firebase": "^9.6.4",
     "i18next": "^21.6.6",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
@@ -80,6 +83,7 @@
     "@storybook/node-logger": "^6.4.13",
     "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/react": "^6.4.13",
+    "@types/firebase": "^3.2.1",
     "@types/react-modal": "^3.13.1",
     "@types/react-router": "^5.1.5",
     "@types/react-router-dom": "^5.3.2",
