--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.24.0",
+    "camelcase-keys": "^7.0.2",
     "ethers": "^5.5.3",
     "firebase": "^8.8.1",
     "i18next": "^21.6.6",
@@ -27,6 +28,7 @@
     "react-query": "^3.34.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "snakecase-keys": "^5.1.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
