--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@types/styled-components": "^5.1.20",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
+    "axios-mock-adapter": "^1.20.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
