--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-query": "^3.34.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-switch": "^6.0.0",
     "snakecase-keys": "^5.1.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
