chore: add jest config to collectCoverageFrom

--- a/package.json
+++ b/package.json
@@ -126,5 +126,13 @@
       "eslint",
       "prettier --check"
     ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}",
+      "!src/**/*.stories.{ts,tsx}",
+      "!<rootDir>/node_modules/",
+      "!<rootDir>/path/to/dir/"
+    ]
   }
 }
