--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-switch": "^6.0.0",
+    "simple-mask-money": "^3.0.1",
     "snakecase-keys": "^5.1.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
