build: add alchemy url env var to CD

--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -16,6 +16,7 @@ env:
   REACT_APP_FIREBASE_MEASUREMENT_ID: ${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
   REACT_APP_RIBON_API: ${{ secrets.REACT_APP_RIBON_API }}
   REACT_APP_RIBON_COMPANY_ID: ${{ secrets.REACT_APP_RIBON_COMPANY_ID }}
+  REACT_APP_ALCHEMY_URL: ${{ secrets.REACT_APP_ALCHEMY_URL }}
 
 jobs:
   build_and_deploy:
