--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.6.0",
     "@sentry/react": "^6.16.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -15,6 +16,7 @@
     "camelcase-keys": "^7.0.2",
     "ethers": "^5.5.3",
     "firebase": "8.8.1",
+    "graphql": "^16.4.0",
     "i18next": "^21.6.6",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
@@ -22,7 +24,7 @@
     "lottie-colorify": "^0.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.15.3",
+    "react-i18next": "^11.16.7",
     "react-lottie-player": "^1.4.1",
     "react-modal": "^3.14.4",
     "react-query": "^3.34.8",
