feat: add token address as env variables

--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -15,6 +15,8 @@ env:
   REACT_APP_RIBON_COMPANY_ID: ${{ secrets.REACT_APP_RIBON_COMPANY_ID }}
   REACT_APP_ALCHEMY_URL: ${{ secrets.REACT_APP_ALCHEMY_URL }}
   REACT_APP_THE_GRAPH_URL: ${{ secrets.REACT_APP_THE_GRAPH_URL }}
+  REACT_APP_RIBON_CONTRACT_ADDRESS: ${{ secrets.REACT_APP_RIBON_CONTRACT_ADDRESS }}
+  REACT_APP_DONATION_TOKEN_CONTRACT_ADDRESS: ${{ secrets.REACT_APP_DONATION_TOKEN_CONTRACT_ADDRESS }}
 
 jobs:
   build_and_preview:
