--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -21,7 +21,7 @@ env:
 jobs:
   build_and_preview:
     environment: staging
-    if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
+    if: "${{ github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]' }}"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
