fix: update dependa bot workflow run

--- a/.github/workflows/ci-dependa-bot.yml
+++ b/.github/workflows/ci-dependa-bot.yml
@@ -2,7 +2,7 @@ name: Dependabot Continuous Integration
 
 on:
   workflow_run:
-    workflows: [ "Dependabot PR Check" ]
+    workflows: [Dependabot PR Check]
     types:
       - completed
 env:
