--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.2.1",
-    "@types/node": "^18.6.3",
     "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.3",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.27.2",
@@ -45,6 +45,7 @@
     "eject": "react-scripts eject",
     "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "lint": "eslint src/**/*.ts src/**/*.tsx && prettier --check src/**/*.ts src/**/*.tsx",
+    "lint:css": "stylelint src/**/styles.ts",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
     "codehawk": "codehawk src"
@@ -80,11 +81,11 @@
   "devDependencies": {
     "@commitlint/cli": "^16.0.2",
     "@commitlint/config-conventional": "^16.0.0",
-    "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-links": "^6.5.10",
-    "@storybook/builder-webpack5": "^6.5.10",
     "@storybook/addon-viewport": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/node-logger": "^6.5.10",
     "@storybook/preset-create-react-app": "^4.1.2",
@@ -114,7 +115,15 @@
     "lint-staged": "^12.1.7",
     "mrm": "4",
     "plop": "^3.0.5",
+    "postcss-scss": "^4.0.2",
     "prettier": "^2.5.1",
+    "stylelint": "^14.10.0",
+    "stylelint-config-recommended": "^9.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-custom-processor-loader": "^0.6.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-processor-styled-components": "^1.10.0",
     "webpack": "^5.74.0"
   },
   "lint-staged": {
