--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,13 +1,20 @@
 {
   "processors": ["stylelint-processor-styled-components"],
-  "extends": ["stylelint-config-standard-scss", "stylelint-config-styled-components"],
+  "extends": [
+    "stylelint-config-standard-scss",
+    "stylelint-config-styled-components",
+    "stylelint-config-prettier"],
   "customSyntax": "postcss-scss",
   "plugins": [
     "stylelint-order"
   ],
   "rules": {
     "rule-empty-line-before": ["always", { "except": "first-nested" }],
-    "at-rule-empty-line-before": "always",
+    "at-rule-empty-line-before": ["always", { "except": "first-nested" }],
+    "declaration-empty-line-before": ["always", {
+      "except": ["first-nested"],
+      "ignore": ["after-comment", "after-declaration"]
+    }],
     "color-hex-case": "lower",
     "color-no-invalid-hex": true,
     "shorthand-property-no-redundant-values": true,
