--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "postcss-scss": "^4.0.2",
     "prettier": "^2.5.1",
     "stylelint": "^14.10.0",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended": "^9.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
