fix: stylelint problems

--- a/package.json
+++ b/package.json
@@ -140,6 +140,9 @@
     "*.tsx": [
       "eslint",
       "prettier --check"
+    ],
+    "styles.ts": [
+      "stylelint"
     ]
   },
   "jest": {
