--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -31,7 +31,7 @@
         "ignore": ["comments"]
       }
     ],
-    "unit-allowed-list": ["em", "rem", "%", "px", "s", "deg", "vh", "ms"],
+    "unit-allowed-list": ["em", "rem", "%", "px", "s", "deg", "vh", "ms", "fr"],
     "order/order": [
       [
         "declarations",
