fix: colors and stylelint font-weight

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -17,6 +17,7 @@
     }],
     "color-hex-case": "lower",
     "color-no-invalid-hex": true,
+    "font-weight-notation": "numeric",
     "shorthand-property-no-redundant-values": true,
     "value-keyword-case": ["lower", { "ignoreKeywords": ["dummyValue"] }],
     "at-rule-no-unknown": [
