feat: remove unecessary envs and transform in constant  and add sentry dns on envs

--- a/.github/workflows/ci-dependa-bot.yml
+++ b/.github/workflows/ci-dependa-bot.yml
@@ -1,7 +1,6 @@
 name: Dependabot Continuous Integration
 
-on:
-  pull_request_target
+on: pull_request_target
 env:
   REACT_APP_FIREBASE_API_KEY: ${{ secrets.REACT_APP_FIREBASE_API_KEY }}
   REACT_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
@@ -10,13 +9,7 @@ env:
   REACT_APP_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
   REACT_APP_FIREBASE_APP_ID: ${{ secrets.REACT_APP_FIREBASE_APP_ID }}
   REACT_APP_FIREBASE_MEASUREMENT_ID: ${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
-  REACT_APP_RIBON_API: ${{ secrets.REACT_APP_RIBON_API }}
-  REACT_APP_RIBON_COMPANY_ID: ${{ secrets.REACT_APP_RIBON_COMPANY_ID }}
-  REACT_APP_ALCHEMY_URL: ${{ secrets.REACT_APP_ALCHEMY_URL }}
-  REACT_APP_THE_GRAPH_URL: ${{ secrets.REACT_APP_THE_GRAPH_URL }}
-  REACT_APP_RIBON_CONTRACT_ADDRESS: ${{ secrets.REACT_APP_RIBON_CONTRACT_ADDRESS }}
-  REACT_APP_DONATION_TOKEN_CONTRACT_ADDRESS: ${{ secrets.REACT_APP_DONATION_TOKEN_CONTRACT_ADDRESS }}
-
+  REACT_APP_SENTRY_DNS: ${{ secrets.REACT_APP_SENTRY_DNS }}
 jobs:
   test-and-preview:
     environment: staging
