--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -11,13 +11,7 @@ env:
   REACT_APP_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
   REACT_APP_FIREBASE_APP_ID: ${{ secrets.REACT_APP_FIREBASE_APP_ID }}
   REACT_APP_FIREBASE_MEASUREMENT_ID: ${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
-  REACT_APP_RIBON_API: ${{ secrets.REACT_APP_RIBON_API }}
-  REACT_APP_RIBON_COMPANY_ID: ${{ secrets.REACT_APP_RIBON_COMPANY_ID }}
-  REACT_APP_ALCHEMY_URL: ${{ secrets.REACT_APP_ALCHEMY_URL }}
-  REACT_APP_THE_GRAPH_URL: ${{ secrets.REACT_APP_THE_GRAPH_URL }}
-  REACT_APP_RIBON_CONTRACT_ADDRESS: ${{ secrets.REACT_APP_RIBON_CONTRACT_ADDRESS }}
-  REACT_APP_DONATION_TOKEN_CONTRACT_ADDRESS: ${{ secrets.REACT_APP_DONATION_TOKEN_CONTRACT_ADDRESS }}
-
+  REACT_APP_SENTRY_DNS: ${{ secrets.REACT_APP_SENTRY_DNS }}
 jobs:
   build_and_preview:
     environment: staging
