--- a/.github/workflows/ci-dependa-bot.yml
+++ b/.github/workflows/ci-dependa-bot.yml
@@ -10,6 +10,8 @@ env:
   REACT_APP_FIREBASE_APP_ID: ${{ secrets.REACT_APP_FIREBASE_APP_ID }}
   REACT_APP_FIREBASE_MEASUREMENT_ID: ${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
   REACT_APP_SENTRY_DNS: ${{ secrets.REACT_APP_SENTRY_DNS }}
+  REACT_APP_RIBON_API: ${{ secrets.REACT_APP_RIBON_API }}
+  REACT_APP_RIBON_COMPANY_ID: ${{ secrets.REACT_APP_RIBON_COMPANY_ID }}
 jobs:
   test-and-preview:
     environment: staging
